--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\infra\infra.csproj" />
+    <ProjectReference Include="..\cg2labweb\cg2labweb.csproj" />
   </ItemGroup>
 
 </Project>
